# learning-rust-usb-hid-barcode-scanner-server

./: .gitignore  Cargo.toml
src/: constants.rs  decoder.rs  device.rs  devices.rs  main.rs  server.rs  tools.rs
src/device/: usb.rs
