[package]
name = "server_usb"
version = "0.1.0"
authors = ["Paul-Sebastian Manole <brokenthorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.5.5"
tracing = "0.1.12"
tracing-subscriber = "0.2.0"